--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -15,13 +15,11 @@
 
 <h:body styleClass="login-body">
     <h:form id="contentForm">
-        <p:messages showDetail="true" />
         <div id="login-wrapper">
             <img src="#{request.contextPath}/images/hhbk_white.png" alt="" width="200px" />
-
+             <p:growl id="messageBox" showDetail="true"/>  
             <div id="login-container">
                 <span class="title">HHBK Userstory</span>
-
                 <div class="ui-g ui-fluid">
                     <div class="ui-g-12">
                         <p:inputText placeholder="Username" value="#{benutzer.benutzername}" />
@@ -30,7 +28,7 @@
                         <p:password placeholder="Password" value="#{benutzer.passwort}" />
                     </div>
                     <div class="ui-g-12">
-                        <p:commandButton value="Login" action="#{benutzer.doLogin()}" icon="fa fa-user" />
+                        <p:commandButton value="Login" action="#{benutzer.doLogin()}" update=":contentForm" icon="fa fa-user" />
                     </div>
                 </div>
             </div>
