--- a/src/main/webapp/WEB-INF/sidebar.xhtml
+++ b/src/main/webapp/WEB-INF/sidebar.xhtml
@@ -25,15 +25,9 @@
                                 </a>
                             </li>
                             <li role="menuitem">
-                                <a href="drucker.xhtml">
+                                <a href="mieter.xhtml">
                                     <i class="layout-menuitem-icon pi pi-fw pi-print"></i>
-                                    <span>Drucker</span>
-                                </a>
-                            </li>
-                            <li role="menuitem">
-                                <a href="rechner.xhtml">
-                                    <i class="layout-menuitem-icon pi pi-fw pi-desktop"></i>
-                                    <span>Rechner</span>
+                                    <span>Mieter</span>
                                 </a>
                             </li>
                         </ul>
