--- a/src/main/webapp/backend/mietobjekte.xhtml
+++ b/src/main/webapp/backend/mietobjekte.xhtml
@@ -35,7 +35,7 @@
                                 <b><h:outputText value="#{item.beschreibung}" /></b>          
                             </p:column>   
                             <p:column headerText="Typ">
-                                <b><h:outputText value="#{item.bezeichnung}" /></b>          
+                                <b><h:outputText value="#{item.typ}" /></b>          
                             </p:column>
                             <p:column headerText="Strasse">
                                 <h:outputText value="#{item.typ}" />   
