--- a/src/main/webapp/WEB-INF/sidebar.xhtml
+++ b/src/main/webapp/WEB-INF/sidebar.xhtml
@@ -18,18 +18,19 @@
                                     <span>Benutzer</span>
                                 </a>
                             </li>
+                             <li role="menuitem">
+                                <a href="mieter.xhtml">
+                                    <i class="layout-menuitem-icon pi pi-fw pi-users"></i>
+                                    <span>Mieter</span>
+                                </a>
+                            </li>
                             <li role="menuitem">
                                 <a href="mietobjekte.xhtml">
                                     <i class="layout-menuitem-icon pi pi-fw pi-home"></i>
                                     <span>Mietobjekte</span>
                                 </a>
                             </li>
-                            <li role="menuitem">
-                                <a href="mieter.xhtml">
-                                    <i class="layout-menuitem-icon pi pi-fw pi-print"></i>
-                                    <span>Mieter</span>
-                                </a>
-                            </li>
+                     
                         </ul>
 
                     </div>
