HintergrundBild für das Login

--- a/src/main/webapp/WEB-INF/sidebar.xhtml
+++ b/src/main/webapp/WEB-INF/sidebar.xhtml
@@ -6,7 +6,7 @@
             <div class="nano">
                 <div class="nano-content sidebar-scroll-content">
                     <div class="logo">
-                        <img src="#{request.contextPath}/images/hhbk_white.png" width="213" />
+                        <img src="#{request.contextPath}/images/LuxusImmo.jpg" width="213" />
                     </div>
 
                     <div class="menu" style="margin-top: 160px;">
