--- a/src/main/webapp/backend/benutzer.xhtml
+++ b/src/main/webapp/backend/benutzer.xhtml
@@ -25,14 +25,14 @@
                             <f:facet name="options">
                                 <p:commandButton action="#{benutzer.doLogout()}" icon="fa fa-sign-out" style="font-size: 15px; height: 30px; width: 30px; margin-top: 3px; margin-left: 3px; vertical-align: middle;" />
                             </f:facet>
-                        </p:menubar>
+                        </p:menubar>    
 
                         <br/>
                         <h1 style="margin-top: 20px;"><i class="layout-menu item-icon pi pi-fw pi-users"></i>&nbsp;Benutzer</h1>
 
                         <p:dataTable id="itemTable" var="item" value="#{benutzer.itemList}" style="width: 100%;">
                             <p:column headerText="Name" style="width: 350px;">
-                                <b><h:outputText value="#{benutzer.item.vorname} #{benutzer.item.nachname}"/></b>
+                                <b><h:outputText value="#{item.vorname} #{item.nachname}"/></b>
                             </p:column>
                             <p:column headerText="Anschrift">
                                 <h:outputText value="#{item.adresse}" />
@@ -122,8 +122,6 @@
                 </h:form>
             </div>
         </p:dialog>
-
-
 
     </ui:define>
 
