--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -28,7 +28,7 @@
             <div id="login-wrapper">
                 <p:growl id="messageBox" showDetail="true"/>  
                 <div id="login-container">
-                    <span class="title">Immobilienverwaltung der HausBrau GmbH</span>
+                    <span class="title">Immobilienverwaltung der HausBau GmbH</span>
                     <div class="ui-g ui-fluid">
                         <div class="ui-g-12">
                             <p:inputText placeholder="Username" value="#{benutzer.benutzername}"/>
