--- a/src/main/webapp/backend/empty.xhtml
+++ b/src/main/webapp/backend/empty.xhtml
@@ -10,10 +10,10 @@
  <style>
   .card h1 {
     text-align: center;
-    font-size 25px;
+    font-size: 30px;
   }
   .context p {
-    .text-align:center;
+    text-align:center;
     font-size: 23px;
   }
   </style>
@@ -23,11 +23,7 @@
             <div class="ui-g-12">
                 <div class="card">
                     <h1>Willkommen #{benutzer.benutzername}</h1>
-                    <p><p:outputLabel value="Admin" rendered="#{benutzer.isAdmin}"/></p>
-                    <p><p:outputLabel value="Kein Admin" rendered="#{not benutzer.isAdmin}"/></p>
-                </div>
-                <div class="context">
-                   <p>Ein herzliches Willkommen im Zuhause Ihrer Immobilie HausBau GmbH steht Ihnen jederzeit zur Seite, um Ihre Anliegen zu betreuen!</p>
+                    <h3>Ein herzliches Willkommen im Zuhause Ihrer Immobilie HausBau GmbH steht Ihnen jederzeit zur Seite, um Ihre Anliegen zu betreuen!</h3>
                 </div>
             </div>
         </div>
